@startuml

interface Prototype {
    + clone() : Prototype
}

class MenSuit implements Prototype {
    + clone() : Prototype
}

class WomenSuit implements Prototype {
    + clone() : Prototype
}

class WomenDress implements Prototype {
    + clone() : Prototype
}

class Client {
    - prototype : Prototype
    + createClothes() : void
}

Client --> Prototype : uses

MenSuit --> MenSuit : clones itself
WomenSuit --> WomenSuit : clones itself
WomenDress --> WomenDress : clones itself

@enduml
